# rust-23-24-MoloceAlin2E1

./: README.md
lab01/src/: main.rs
lab02/src/: main.rs
lab03/p1/src/: main.rs
lab03/p2/src/: main.rs
lab03/p3/src/: main.rs
lab03/p4/src/: main.rs
lab03/p5/src/: main.rs
lab04/p1/src/: main.rs
lab04/p2/src/: main.rs  p2.txt
lab04/p3/src/: main.rs
lab04/p4/src/: main.rs
lab05/life/src/: glider.txt  gospergun.txt  main.rs  pentadecathlon.txt
lab05/p1/src/: main.rs
lab05/p2/: Cargo.toml
lab05/p2/src/: main.rs  person.json
lab06/src/: main.rs
lab07/src/: main.rs
lab08/bonus/: Cargo.toml
lab08/bonus/src/: main.rs
lab08/p1/src/: main.rs
lab09/workspace/: cargo.toml
lab09/workspace/base64/: Cargo.toml
lab09/workspace/base64/src/: lib.rs
lab09/workspace/encoder/: Cargo.toml
lab09/workspace/encoder/src/: main.rs
lab10/src/: main.rs
lab11/src/: main.rs
redditor/: Cargo.toml
redditor/src/: main.rs
