[package]
name = "redditor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = "2.9.1"
serde = "1"
serde_derive = "1"
serde_json = "1"
chrono = "0.4.31"
clap = { version = "4", features = ["derive"] }